# ishelly

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: christmas.py  example.py  quick-start.py  rgbw-pm.py  switch_status.py  world_tour.py
ishelly/: __init__.py  api.py  client.py
ishelly/components/: base.py  kvs.py  rgbw.py  schedule.py  script.py  shelly.py  switch.py  webhook.py
tests/: smoke_test.py
