[tool.poetry]
name = "ishelly"
version = "0.1.2"
description = ""
authors = ["y"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.4.2"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
twine = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
