[project]
name = "ishelly"
version = "0.1.5.1"
description = "Control Shelly Home Automation Devices"
authors = [{ name = "LightningSpore", email = "admin@lightningspore.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.4.2",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.11.0",
    "twine>=5.1.1",
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
